# fast_zero

./: .gitignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/versions/: 3c8da058aa17_create_users_table.py  5a09d772aa1d_acrescentada_coluna_updated_at_em_users.py  7de594a4c893_adding_columns_creted_at_and_updated_at_.py  b5aab1f0a13d_create_todos_table.py
src/fast_zero/: app.py  models.py  schemas.py  security.py
src/fast_zero/routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
